--- a/app/src/main/res/layout/activity_feeling.xml
+++ b/app/src/main/res/layout/activity_feeling.xml
@@ -71,7 +71,7 @@
                                     android:layout_gravity="start"
                                     android:background="@drawable/rounded_corner"
                                     android:gravity="center"
-                                    android:text="Sad"
+                                    android:text="Sad\n😔"
                                     android:textColor="#ffffff"
                                     android:textSize="24sp"
                                     android:onClick="setMood"
@@ -89,7 +89,7 @@
                                     android:layout_marginLeft="35dp"
                                     android:background="@drawable/rounded_corner"
                                     android:gravity="center"
-                                    android:text="Angry"
+                                    android:text="Angry\n😠"
                                     android:textColor="#ffffff"
                                     android:textSize="24sp"
                                     android:onClick="setMood"
@@ -123,7 +123,7 @@
                                     android:layout_gravity="start"
                                     android:background="@drawable/rounded_corner"
                                     android:gravity="center"
-                                    android:text="Depressed"
+                                    android:text="Depressed\n😞"
                                     android:textColor="#ffffff"
                                     android:textSize="24sp"
                                     android:onClick="setMood"
@@ -141,7 +141,7 @@
                                     android:layout_marginLeft="35dp"
                                     android:background="@drawable/rounded_corner"
                                     android:gravity="center"
-                                    android:text="Worried"
+                                    android:text="Worried\n😟"
                                     android:textColor="#ffffff"
                                     android:textSize="24sp"
                                     android:onClick="setMood"
@@ -175,7 +175,8 @@
                                     android:layout_gravity="start"
                                     android:background="@drawable/rounded_corner"
                                     android:gravity="center"
-                                    android:text="Frustrated"
+                                    android:text="Frustrated\n🫤"
+                                    android:textColor="#ffffff"
                                     android:textSize="24sp"
                                     android:onClick="setMood"
                                     app:layout_constraintBottom_toBottomOf="parent"
@@ -192,7 +193,7 @@
                                     android:layout_marginLeft="35dp"
                                     android:background="@drawable/rounded_corner"
                                     android:gravity="center"
-                                    android:text="Anxious"
+                                    android:text="Anxious\n😰"
                                     android:textColor="#ffffff"
                                     android:textSize="24sp"
                                     android:onClick="setMood"
