--- a/app/src/main/res/layout/activity_expanded_journal.xml
+++ b/app/src/main/res/layout/activity_expanded_journal.xml
@@ -12,10 +12,11 @@
         android:id="@+id/linearLayout3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="98dp"
+        android:layout_marginTop="48dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -25,14 +26,16 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="41dp"
             android:text="Journal Header"
+            android:textColor="@color/black"
             android:textSize="32sp" />
 
         <TextView
             android:id="@+id/journalDateText"
-            android:layout_margin="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="16dp"
             android:text="Date"
+            android:textColor="@color/black"
             android:textSize="15sp" />
 
         <TextView
@@ -41,7 +44,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="56dp"
             android:padding="25dp"
-            android:text="Journal Body" />
+            android:text="Journal Body"
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
