--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -70,7 +74,7 @@
 
             <TextView
                 android:id="@+id/Quotes"
-                android:layout_width="324dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:text="\tQuote :"
@@ -79,7 +83,7 @@
 
             <TextView
                 android:id="@+id/Daily_Quotes"
-                android:layout_width="336dp"
+                android:layout_width="match_parent"
                 android:layout_height="61dp"
                 android:text="\tDaily_Quote here"
                 android:textSize="28sp" />
@@ -103,8 +107,8 @@
 
             <TextView
                 android:id="@+id/Daily_Tip"
-                android:layout_width="336dp"
-                android:layout_height="61dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:text="\tDaily Tip :"
                 android:textSize="35sp"
@@ -112,8 +116,8 @@
 
             <TextView
                 android:id="@+id/Tip"
-                android:layout_width="336dp"
-                android:layout_height="61dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="\tWrite Tip Here"
                 android:textSize="28sp" />
         </LinearLayout>
@@ -132,15 +136,21 @@
             app:layout_constraintVertical_bias="0.498">
 
             <TextView
-                android:id="@+id/Monthly_Activity"
-                android:layout_width="336dp"
-                android:layout_height="61dp"
-                android:layout_marginTop="15dp"
-                android:text="\tYour Monthly Activity :"
-                android:textSize="28sp"
-                android:textStyle="bold" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Beats for you"
+                android:layout_gravity="center"
+                android:textSize="20sp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/beatsRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="15dp"/>
         </LinearLayout>
 
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
