--- a/app/src/main/res/layout/activity_new_journal.xml
+++ b/app/src/main/res/layout/activity_new_journal.xml
@@ -6,17 +6,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.journal.NewJournalActivity">
+
     <ImageView
         android:id="@+id/backgroundImageViewNewJournal"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="743dp"
         android:scaleType="fitXY"
-        android:src="@drawable/newjournal" /> <!-- Replace with your image resource -->
+        android:src="@drawable/newjournal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" /> <!-- Replace with your image resource -->
 
     <EditText
         android:id="@+id/journalTitle"
-        android:layout_width="373dp"
-        android:layout_height="44dp"
+        android:layout_width="361dp"
+        android:layout_height="43dp"
         android:layout_marginTop="46dp"
         android:layout_marginBottom="69dp"
         android:hint="Enter title"
@@ -39,8 +42,8 @@
 
     <EditText
         android:id="@+id/journalDesc"
-        android:layout_width="333dp"
-        android:layout_height="333dp"
+        android:layout_width="350dp"
+        android:layout_height="450dp"
         android:layout_marginStart="14dp"
         android:layout_marginTop="233dp"
         android:layout_marginEnd="14dp"
